preflight/impl/tests/ui/fail-invalid-syntax.stderr
error: expected `,`
 --> $DIR/fail-invalid-syntax.rs:5:32
  |
5 | #[avionics_harness(ooooo , eee / 0099 | gee)]
  |                                ^

warning: unused imports: `Avionics`, `Control`, `Sensors`
 --> $DIR/fail-invalid-syntax.rs:1:40
  |
1 | use preflight_impl::{avionics_harness, Avionics, Control, Sensors};
  |                                        ^^^^^^^^  ^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
